--- a/Project/GameProject/GameProject.vcxproj
+++ b/Project/GameProject/GameProject.vcxproj
@@ -16,12 +16,14 @@
     <ClCompile Include="FreeNum.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SelectScene\SelectScene.cpp" />
+    <ClCompile Include="Title\Title.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Base\Base.h" />
     <ClInclude Include="Card\BaseCard.h" />
     <ClInclude Include="FreeNum.h" />
     <ClInclude Include="SelectScene\SelectScene.h" />
+    <ClInclude Include="Title\Title.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{FE2CE3B1-49BF-46A5-9DB1-9BD5B52FE1A0}</ProjectGuid>
